<resources>
    <string name="app_name">Quiz App</string>
    <string name="action_settings">Settings</string>

    <!--Questions-->
    <string name="question_1">Q1. What built-in database is Android shipped with?</string>
    <string name="question_2">Q2. The XML file that contains all the text that your application uses?</string>
    <string name="question_3">Q3. The ___________ file specifies the layout of your screen?</string>
    <string name="question_4">Q4. The R file is an_______generated file?</string>
    <string name="question_5">Q5. When did Google purchase Android?</string>
    <string name="question_6">Q6. What part of the Android platform is open source?</string>


    <string name="enter_text">Type here</string>
    <string name="score">Score</string>

    <string name="q1o1">Apache</string>
    <string name="q1o2">MySQL</string>
    <string name="q1o3">SQLite</string>
    <string name="q1o4">Oracle</string>


    <string name="q2o1">Stack.xml</string>
    <string name="q2o2">Text.xml</string>
    <string name="q2o3">Strings.xml</string>
    <string name="q2o4">String.java</string>



    <string name="Automatically">Automatically</string>

    <string name="Layout">Layout</string>

    <string name="q5o1">2007</string>
    <string name="q5o2">2005</string>
    <string name="q503">2008</string>
    <string name="q5o4">2010</string>

    <string name="q6o1">native libraries</string>
    <string name="q6o2">complete applications</string>
    <string name="q6o3">low-level Linux modules</string>
    <string name="q6o4">application framework</string>
    <string name="reset">Reset</string>


</resources>