<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QuizAppActivityFragment"
    tools:showIn="@layout/activity_quiz_app">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/q1_textview"
                style="@style/QuestionAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_1" />

            <RadioGroup
                android:id="@+id/radiogrp_q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radiobtn_q1_opt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1o1" />

                <RadioButton
                    android:id="@+id/radiobtn_q1_opt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1o2" />

                <RadioButton
                    android:id="@+id/radiobtn_q1_opt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1o3" />

                <RadioButton
                    android:id="@+id/radiobtn_q1_opt4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1o4" />
            </RadioGroup>

            <View
                style="@style/SeparaterTheme"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height" />


            <TextView
                android:id="@+id/q2_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_2"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <RadioGroup
                android:id="@+id/radiogrp_q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radiobtn_q2_opt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2o1" />

                <RadioButton
                    android:id="@+id/radiobtn_q2_opt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2o2" />

                <RadioButton
                    android:id="@+id/radiobtn_q2_opt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2o3" />

                <RadioButton
                    android:id="@+id/radiobtn_q2_opt4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2o4" />
            </RadioGroup>

            <View
                style="@style/SeparaterTheme"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height" />


            <TextView
                android:id="@+id/q3_textview"
                style="@style/QuestionAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_3" />

            <EditText
                android:id="@+id/q3_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_text"
                android:maxLines="1" />

            <View
                style="@style/SeparaterTheme"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height" />

            <TextView
                android:id="@+id/q4_textview"
                style="@style/QuestionAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_4" />

            <EditText
                android:id="@+id/q4_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_text"
                android:maxLines="1" />

            <View
                style="@style/SeparaterTheme"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height" />

            <TextView
                android:id="@+id/q5_textview"
                style="@style/QuestionAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_5" />

            <RadioGroup
                android:id="@+id/radiogrp_q5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radiobtn_q5_opt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q5o1" />

                <RadioButton
                    android:id="@+id/radiobtn_q5_opt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q5o2" />

                <RadioButton
                    android:id="@+id/radiobtn_q5_opt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q503" />

                <RadioButton
                    android:id="@+id/radiobtn_q5_opt4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q5o4" />
            </RadioGroup>

            <View
                style="@style/SeparaterTheme"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height" />

            <TextView
                android:id="@+id/q6_textview"
                style="@style/QuestionAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_6" />

            <CheckBox
                android:id="@+id/chkbox_q6_opt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6o1" />

            <CheckBox
                android:id="@+id/chkbox_q6_opt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6o2" />

            <CheckBox
                android:id="@+id/chkbox_q6_opt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6o3" />

            <CheckBox
                android:id="@+id/chkbox_q6_opt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6o4" />

            <View
                style="@style/SeparaterTheme"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:orientation="horizontal">

            <Button
                android:id="@+id/reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:layout_gravity="start"
                android:text="@string/reset"/>

            <Button
                android:id="@+id/display_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:layout_gravity="end"
                android:text="@string/score" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>